# Mafs

./: CMakeLists.txt  README.md
app/: main.cpp
cmake/: Doctest.cmake  FetchExternal.cmake  Misc.cmake
include/Mafs/Matrix/: Matrix.hpp  MatrixBase.hpp  MatrixContainer.hpp  MatrixDataTypes.hpp
include/Mafs/Matrix/Operations/: BaseOperations.hpp  BasicOperations.hpp  CudaOperations.hpp  Operations.hpp
include/Mafs/Utils/: Utils.hpp
include/mafs/Matrix/: basic_op.cc  openmp_op.cc
src/Matrix/: Matrix.cc  avx_op.cc  cuda_op.cc
tests/: CMakeLists.txt
tests/Matrix/: Basic_op_test.cpp  MatrixBaseTest.cpp  MatrixTest.cpp  Matrix_test.cpp
tests/Matrix/Operations/: MatrixBasicOperationsTest.cpp
